# JamRecorder

./: .gitignore  LICENSE  README.md  example_config.json  pyproject.toml  readme.md  record.py  record_screen.py  share.py  timelapse.py  utils.py
